Add validation in submit event

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
       </section>
     </section>
     <section id="contact">
-      <form id="contact-me" action="https://formspree.io/f/mnqlvaea" method="post">
+      <!-- <form id="contact-me" action="https://formspree.io/f/mnqlvaea" method="post"> -->
+        <form id="contact-me" action="#" method="post">
         <h2>Contact me</h2>
         <p>
           If you have an application you are interested in developing, a
@@ -248,7 +249,7 @@
               maxlength="30" />
           </li>
           <li>
-            <input type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here" required />
+            <input id="email" type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here" required />
           </li>
           <li>
             <textarea class="input-box input-box-area" placeholder="Write your message here" name="user_message"
