Add styling to error message

--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
           to help with it
         </p>
         <ul>
-          <li id="email-area">
-            <input type="text" class="input-box email-box" name="user_name" placeholder="Enter your name here" required
+          <li>
+            <input type="text" class="input-box" name="user_name" placeholder="Enter your name here" required
               maxlength="30" />
           </li>
           <li>
-            <input id="email" type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here" required />
+            <input id="email" type="email" class="input-box" name="user_email" placeholder="Enter your e-mail here" required />    
           </li>
           <li>
             <textarea class="input-box input-box-area" placeholder="Write your message here" name="user_message"
@@ -259,6 +259,7 @@
             <button class="large-button white-button intouch" type="submit">
               Get In Touch
             </button>
+            <div id="error-message" class="small-button"><span>Error message!!!</span></div>
           </li>
         </ul>
       </form>
