Edit the css and Javascript files to show error box.

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
       </section>
     </section>
     <section id="contact">
-      <!-- <form id="contact-me" action="https://formspree.io/f/mnqlvaea" method="post"> -->
-        <form id="contact-me" action="#" method="post">
+      <!-- <form id="contact-me"  method="post"> -->
+        <form action="https://formspree.io/f/mnqlvaea" method="post" id="contact-me" action="#" >
         <h2>Contact me</h2>
         <p>
           If you have an application you are interested in developing, a
@@ -259,7 +259,7 @@
             <button class="large-button white-button intouch" type="submit">
               Get In Touch
             </button>
-            <div id="error-message" class="small-button"><span>Error message!!!</span></div>
+            <div id="error-message" class="small-button"><span>Please use only lowercase for email input!</span></div>
           </li>
         </ul>
       </form>
