--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </section>
     <section id="contact">
       <!-- <form id="contact-me"  method="post"> -->
-        <form action="https://formspree.io/f/mnqlvaea" method="post" id="contact-me" action="#" >
+        <form action="https://formspree.io/f/mnqlvaea" method="post" id="contact-me">
         <h2>Contact me</h2>
         <p>
           If you have an application you are interested in developing, a
