Change error box color.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <button class="large-button white-button intouch" type="submit">
               Get In Touch
             </button>
-            <div id="error-message" class="small-button"><span>Please use only lowercase for email input!</span></div>
+            <div id="error-message" class="small-button"><span>Form not sent. Please use only lowercase for email input!</span></div>
           </li>
         </ul>
       </form>
