Update project info.

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
             <div class="project__info">
               <h2 class="project__title">Tonic</h2>
               <ul class="project__quali">
-                <li>Canopy</li>
+                <li>Self Employed</li>
                 <li class="project__circle"></li>
-                <li>Back End Dev</li>
+                <li>Front End</li>
                 <li class="project__circle"></li>
-                <li>2015</li>
+                <li>2021</li>
               </ul>
               <p class="project__desc">
                 A daily selection of privately personalized reads;
@@ -133,7 +133,7 @@
         </div>
         <ul class="modal__list">
           <li>
-            <h3 class="modal__company">Canopy</h3>
+            <h3 class="modal__company">Self Employed</h3>
           </li>
           <li class="project__circle"></li>
           <li>
@@ -141,7 +141,7 @@
           </li>
           <li class="project__circle"></li>
           <li>
-            <h4 class="modal__year">2015</h4>
+            <h4 class="modal__year">2021</h4>
           </li>
         </ul>
         <img class="modal__img" src="./images/dortfoliopic1.svg" alt="Work preview for project Uber Navigation">
