Update projects data

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li class="nav-logo"><a href="#">My Logo</a></li>
+        <li class="nav-logo"><a href="#">Rhyine Stewart</a></li>
         <li class="menu-options"><a href="#portfolio">Portfolio</a></li>
         <li class="menu-options"><a href="#about">About</a></li>
         <li class="menu-options"><a href="#contact">Contact</a></li>
