Finish updates for projects section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar">
       <ul>
         <li class="nav-logo"><a href="#">Rhyine Stewart</a></li>
-        <li class="menu-options"><a href="#portfolio">Portfolio</a></li>
+        <li class="menu-options"><a href="#project-list">Portfolio</a></li>
         <li class="menu-options"><a href="#about">About</a></li>
         <li class="menu-options"><a href="#contact">Contact</a></li>
         <li id="burger">
@@ -41,7 +41,7 @@
     </nav>
     <div id="pop-menu" class="pop-menu">
       <ul id="menu-list">
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#project-list">Portfolio</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
